test/TestPhases/parser/invalid/missingConstInit.blc
@[EntryPoint]
activity E ()()
    const fb: bool 
    await true
end